--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/abid7777/memo#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.0.1",
     "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
@@ -40,6 +41,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-tailwindcss": "^3.5.0",
+    "miragejs": "^0.1.44",
     "postcss": "^8.4.14",
     "stylelint": "^14.8.5",
     "stylelint-config-standard": "^25.0.0",
@@ -53,6 +55,10 @@
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.39.0",
+    "react-router-dom": "^6.3.0",
+    "uninstall": "^0.0.0"
   }
 }
