--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/abid7777/memo#readme",
   "devDependencies": {
     "@faker-js/faker": "^7.0.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
@@ -53,6 +54,7 @@
     "@headlessui/react": "^1.6.2",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
+    "millify": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
