--- a/app/package.json
+++ b/app/package.json
@@ -61,6 +61,7 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
+    "timeago.js": "^4.0.2",
     "uninstall": "^0.0.0"
   }
 }
