--- a/app/package.json
+++ b/app/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.2",
     "classnames": "^2.3.1",
+    "framer-motion": "^6.3.4",
     "lodash": "^4.17.21",
     "millify": "^4.0.0",
     "prop-types": "^15.8.1",
